panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__equality-ops__test_ptr_neq.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/equality-ops/test_ptr_neq.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/equality-ops/test_ptr_neq.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int` @0) ∅)
         (definition (y~3 `int` @4) ∅)
         (return
            (ptr-not-equal `int` @8
               (addressof `ptr<int>` @16
                  (x~2 `int` @0))
               (addressof `ptr<int>` @24
                  (y~3 `int` @4)))))))

----- stderr -----
